Support artifacts for PR

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -83,35 +83,37 @@ for:
     - cmd: python -m unittest discover "%APPVEYOR_BUILD_FOLDER%\test"
 
   after_test:
-    - cmd: echo --- after_test (Building Localization and Packing) ---
+    - ps: |
+        echo '--- after_test (Building Localization and Packing) ---'
+        if ($APPVEYOR_REPO_TAG_NAME) { $env:VER = $APPVEYOR_REPO_TAG_NAME } else { $env:VER = $APPVEYOR_REPO_COMMIT }
     - if "%ARCH%"=="64" (
         echo --- Preparing a Debug version --- &&
         cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine-debug" &&
         md ".\locale\ru\LC_MESSAGES" &&
         python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po" &&
         echo --- Packing a Debug version --- &&
-        7z a ..\festengine-%APPVEYOR_REPO_TAG_NAME%-win%ARCH%-VLCv%VLC_VERSION%-debug.zip *)
+        7z a ..\festengine-%VER%-win%ARCH%-VLCv%VLC_VERSION%-debug.zip *)
     - cmd: |
         echo --- Preparing a Full version ---
         cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine"
         md ".\locale\ru\LC_MESSAGES"
         python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po"
         echo --- Packing a Full version ---
-        7z a ..\festengine-%APPVEYOR_REPO_TAG_NAME%-win%ARCH%-VLCv%VLC_VERSION%-full.zip *
+        7z a ..\festengine-%VER%-win%ARCH%-VLCv%VLC_VERSION%-full.zip *
     - if "%VLC%"=="latest" (
         echo --- Minimalizing a Full version --- &&
         cd "%APPVEYOR_BUILD_FOLDER%\bin\" &&
         .\minimalize.bat &&
         echo --- Packing a Minimal version --- &&
-        7z a .\festengine-%APPVEYOR_REPO_TAG_NAME%-win%ARCH%-minimal.zip .\FestEngine\*)
+        7z a .\festengine-%VER%-win%ARCH%-minimal.zip .\FestEngine\*)
 
   artifacts:
-    - name: FestEngine $(appveyor_repo_tag_name) Windows $(arch)bit VLC $(vlc_version) Debug
-      path: bin\festengine-$(appveyor_repo_tag_name)-win$(arch)-VLCv$(vlc_version)-debug.zip
-    - name: FestEngine $(appveyor_repo_tag_name) Windows $(arch)bit VLC $(vlc_version) Full
-      path: bin\festengine-$(appveyor_repo_tag_name)-win$(arch)-VLCv$(vlc_version)-full.zip
-    - name: FestEngine $(appveyor_repo_tag_name) Windows $(arch)bit Minimal
-      path: bin\festengine-$(appveyor_repo_tag_name)-win$(arch)-minimal.zip
+    - name: FestEngine $(ver) Windows $(arch)bit VLC $(vlc_version) Debug
+      path: bin\festengine-$(ver)-win$(arch)-VLCv$(vlc_version)-debug.zip
+    - name: FestEngine $(ver) Windows $(arch)bit VLC $(vlc_version) Full
+      path: bin\festengine-$(ver)-win$(arch)-VLCv$(vlc_version)-full.zip
+    - name: FestEngine $(ver) Windows $(arch)bit Minimal
+      path: bin\festengine-$(ver)-win$(arch)-minimal.zip
 
 -
   matrix:
