--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,70 +42,26 @@ for:
 
   install:
     - ps: |
-        if ($env:ARCH -eq "32") {
-          $env:VLC_INSTALL_FLAGS = "--x86"; $env:PYTHON_PATH = "C:\Python36"} else {$env:PYTHON_PATH = "C:\Python36-x64"
-        }
-        if ($env:VLC -eq "latest") {
-          $env:VLC_VERSION = ((choco list vlc | Select-String -Pattern "^vlc [\d\.]* \[Approved\]") -split " ")[1]
-        } else {
-          $env:VLC_VERSION = $env:VLC
-          $env:VLC_INSTALL_FLAGS += " --version $env:VLC_VERSION"
-        }
-    - cmd: |
-        set PATH=%PYTHON_PATH%;%PYTHON_PATH%\Scripts;%PATH%
-        pip install pyinstaller python-vlc wxpython pywinauto
-        choco install -y --no-progress %VLC_INSTALL_FLAGS% vlc
+        Import-Module -Force .\ci.psm1
+        FestEngineGetDeps
+
 
   build_script:
-    - cmd: |
-        echo --- build_script ---
-        cd "%APPVEYOR_BUILD_FOLDER%\bin"
-        echo --- Building a Full version ---
-        python build.py
-        echo --- Building a Debug version ---
-        python build.py -d
+    - ps: FestEngineBuild
 
   after_build:
-    - cmd: |
-        echo --- after_build (Cleaning MS DLLs) ---
-        cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine-debug"
-        del MSVCP140.dll VCRUNTIME140.dll api-ms-*
-        cd "..\FestEngine"
-        del MSVCP140.dll VCRUNTIME140.dll api-ms-*  # GPL does not allow...
+    - ps: FestEngineCleanProprietaryLibs
 
   before_test:
-    - cmd: |
-        echo --- before_test (Downloading test data) ---
-        cd "%APPVEYOR_BUILD_FOLDER%\test\data"
+    - ps: |
+        echo '--- Downloading test data ---'
         git submodule update --init
 
   test_script:
-    - cmd: python -m unittest discover "%APPVEYOR_BUILD_FOLDER%\test"
+    - ps: python -m unittest discover '.\test'
 
   after_test:
-    - ps: |
-        echo '--- after_test (Building Localization and Packing) ---'
-        if ($env:APPVEYOR_REPO_TAG_NAME) { $env:VER = $env:APPVEYOR_REPO_TAG_NAME } else { $env:VER = $env:APPVEYOR_REPO_COMMIT.substring(0,7) }
-    - if "%ARCH%"=="64" (
-        echo --- Preparing a Debug version --- &&
-        cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine-debug" &&
-        md ".\locale\ru\LC_MESSAGES" &&
-        python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po" &&
-        echo --- Packing a Debug version --- &&
-        7z a ..\festengine-%VER%-win%ARCH%-VLCv%VLC_VERSION%-debug.zip *)
-    - cmd: |
-        echo --- Preparing a Full version ---
-        cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine"
-        md ".\locale\ru\LC_MESSAGES"
-        python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po"
-        echo --- Packing a Full version ---
-        7z a ..\festengine-%VER%-win%ARCH%-VLCv%VLC_VERSION%-full.zip *
-    - if "%VLC%"=="latest" (
-        echo --- Minimalizing a Full version --- &&
-        cd "%APPVEYOR_BUILD_FOLDER%\bin\" &&
-        .\minimalize.bat &&
-        echo --- Packing a Minimal version --- &&
-        7z a .\festengine-%VER%-win%ARCH%-minimal.zip .\FestEngine\*)
+    - ps: FestEnginePackage
 
   artifacts:
     - name: FestEngine $(ver) Windows $(arch)bit VLC $(vlc_version) Debug
