--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ for:
     only:
       - image: Ubuntu
         ARCH: '64'
+        APPVEYOR_REPO_TAG: true
 
   install:
     - sudo apt-get update
