--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,8 @@
 clone_depth: 1
 skip_branch_with_pr: true
 image:
-    - Ubuntu
     - Visual Studio 2019
+    - Ubuntu
 environment:
   APPVEYOR_RDP_PASSWORD:
     secure: MPAYz75AKBf954hdYvzz2VoCxy5RJLBdg0fajQ1SQUU=
@@ -13,24 +13,6 @@ environment:
       VLC: '2.2.8'
 
 for:
--
-  matrix:
-    only:
-      - image: Ubuntu
-        ARCH: '64'
-        APPVEYOR_REPO_TAG: true
-
-  install:
-    - sudo apt-get update
-    - sudo apt-get install -y python3-pip
-    - sudo -H pip3 install -U docker-compose
-  build_script:
-    - ./bin/build.sh
-  artifacts:
-    - name: FestEngine Linux 64bit Minimal
-      path: bin/fest_engine-linux-x64-minimal.tar.gz
-
-
 -
   matrix:
     only:
@@ -59,7 +41,7 @@ for:
         git submodule update --init
 
   test_script:
-    - ps: python -m unittest discover './test'
+    - ps: python3 -m unittest discover './test'
 
   after_test:
     - ps: FestEnginePackage
@@ -85,3 +67,20 @@ for:
         prerelease: true
         on:
           appveyor_repo_tag: true
+
+-
+  matrix:
+    only:
+      - image: Ubuntu
+        ARCH: '64'
+        APPVEYOR_REPO_TAG: true
+
+  install:
+    - sudo apt-get update
+    - sudo apt-get install -y python3-pip
+    - sudo -H pip3 install -U docker-compose
+  build_script:
+    - ./bin/build.sh
+  artifacts:
+    - name: FestEngine Linux 64bit Minimal
+      path: bin/fest_engine-linux-x64-minimal.tar.gz
