--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,9 @@ for:
         FestEngineGetDeps
 
   build_script:
-    - pwsh: FestEngineBuild
+    - pwsh: |
+        Import-Module -Force "$env:APPVEYOR_BUILD_FOLDER/bin/ci.psm1"
+        FestEngineBuild
 
   before_test:
     - pwsh: |
@@ -37,10 +39,14 @@ for:
         git submodule update --init 2>&1
 
   test_script:
-    - pwsh: '& "$env:PYTHON_PATH/python.exe" -m unittest discover "./test"'
+    - pwsh: |
+        echo '--- Running tests ---'
+        & "$env:PYTHON_PATH/python.exe" -m unittest discover "./test"
 
   after_test:
-    - pwsh: FestEnginePackage
+    - pwsh: |
+        Import-Module -Force "$env:APPVEYOR_BUILD_FOLDER/bin/ci.psm1"
+        FestEnginePackage
 
   artifacts:
     - name: FestEngine $(ver) Windows $(arch)bit VLC $(vlc_version) Debug
