--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,10 +21,7 @@ for:
         ARCH: '64'
 
   install:
-    - sudo apt-get update
-    - sudo apt-get install -y python3-pip
-    - sudo -H pip3 install --upgrade pip
-    - sudo -H pip3 install --upgrade docker-compose
+    - sudo -H pip install --upgrade pip docker-compose
   build_script:
     - ./bin/build.sh
   artifacts:
